// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`testUtilsTagsPlugin > should produce correct results for testcase edge-cases 1`] = `
{
  "modules": [
    {
      "declarations": [
        {
          "customElement": true,
          "description": "",
          "kind": "class",
          "name": "EdgeCasesComponent",
          "superclass": {
            "name": "HTMLElement",
          },
          "vividTesting": {
            "actions": [
              {
                "args": [
                  "arg1",
                ],
                "name": "singleArg",
              },
              {
                "args": [
                  "arg1",
                  "arg2",
                  "arg3",
                ],
                "name": "multipleArgs",
              },
            ],
            "queries": [
              {
                "args": [
                  "single backtick arg",
                ],
                "name": "backtickSingle",
              },
              {
                "args": [
                  "first arg",
                  "second arg",
                  "normalArg",
                ],
                "name": "backtickMultiple",
              },
              {
                "args": [
                  "arg1",
                  "spaced backtick",
                  "arg2",
                ],
                "name": "mixedSpacing",
              },
            ],
            "refs": [
              {
                "args": [
                  "element",
                  "shadow .complex > selector",
                  "method",
                  "another arg",
                ],
                "name": "complexCase",
              },
              {
                "args": [],
                "name": "emptyBackticks",
              },
              {
                "args": [
                  "unbalanced",
                ],
                "name": "unbalancedStart",
              },
              {
                "args": [
                  "unbalanced",
                ],
                "name": "unbalancedEnd",
              },
            ],
            "selectors": [
              {
                "args": [],
                "name": "empty",
              },
              {
                "args": [],
                "name": "spaced",
              },
            ],
          },
        },
      ],
      "exports": [
        {
          "declaration": {
            "module": "my-element.js",
            "name": "EdgeCasesComponent",
          },
          "kind": "js",
          "name": "EdgeCasesComponent",
        },
      ],
      "kind": "javascript-module",
      "path": "my-element.js",
    },
  ],
  "readme": "",
  "schemaVersion": "1.0.0",
}
`;

exports[`testUtilsTagsPlugin > should produce correct results for testcase simple-cases 1`] = `
{
  "modules": [
    {
      "declarations": [
        {
          "customElement": true,
          "description": "",
          "kind": "class",
          "name": "SimpleComponent",
          "superclass": {
            "name": "HTMLElement",
          },
          "vividTesting": {
            "actions": [
              {
                "args": [],
                "name": "single backtick arg only",
              },
            ],
            "queries": [
              {
                "args": [
                  "arg",
                ],
                "name": "oneArg",
              },
            ],
            "refs": [],
            "selectors": [
              {
                "args": [],
                "name": "singleWord",
              },
            ],
          },
        },
      ],
      "exports": [
        {
          "declaration": {
            "module": "my-element.js",
            "name": "SimpleComponent",
          },
          "kind": "js",
          "name": "SimpleComponent",
        },
      ],
      "kind": "javascript-module",
      "path": "my-element.js",
    },
  ],
  "readme": "",
  "schemaVersion": "1.0.0",
}
`;

exports[`testUtilsTagsPlugin > should produce correct results for testcase special-characters 1`] = `
{
  "modules": [
    {
      "declarations": [
        {
          "customElement": true,
          "description": "",
          "kind": "class",
          "name": "SpecialCharactersComponent",
          "superclass": {
            "name": "HTMLElement",
          },
          "vividTesting": {
            "actions": [
              {
                "args": [],
                "name": "backticks with spaces    and    tabs",
              },
              {
                "args": [],
                "name": "json {"key": "value", "array": [1, 2, 3]}",
              },
            ],
            "queries": [
              {
                "args": [],
                "name": "special!@#$%^&*()_+-={}[]|\\\\:";'<>,.?/",
              },
            ],
            "refs": [
              {
                "args": [
                  "café",
                  "тест",
                  "emoji🚀",
                ],
                "name": "unicode",
              },
            ],
            "selectors": [
              {
                "args": [
                  "backticks test",
                ],
                "name": "nested inner",
              },
              {
                "args": [],
                "name": "css selector div.class#id[attr="value"]",
              },
            ],
          },
        },
      ],
      "exports": [
        {
          "declaration": {
            "module": "my-element.js",
            "name": "SpecialCharactersComponent",
          },
          "kind": "js",
          "name": "SpecialCharactersComponent",
        },
      ],
      "kind": "javascript-module",
      "path": "my-element.js",
    },
  ],
  "readme": "",
  "schemaVersion": "1.0.0",
}
`;
